@@ -8,6 +8,7 @@ Cacti CHANGELOG
 -issue#1109: Fixed URL used in redirection when referrer already has parameters in it
 -issue#1111: Fixed PHP NOTICE when using LDAP authenication
 -issue#1116: Fix issue with filters not allowing "None" or "All" when editing report item
+-issue#1119: Reduced amount of data feteched for CPU usage to just the data used
 -issue: New Graph pagenation and filter reset
 
 1.1.28
